syntax = "proto3";
package zetachain.zetacore.crosschain;

option go_package = "github.com/zeta-chain/zetacore/x/crosschain/types";

import "gogoproto/gogo.proto";

message Keygen {
  string creator = 1;
  uint64 status = 2; // 0--to generate key; 1--generated; 2--error
  repeated string pubkeys = 3;
  uint64 blockNumber = 4; // the blocknum that the key needs to be generated
}
